--- a/package.json
+++ b/package.json
@@ -17,5 +17,7 @@
     "typescript": "^4.5.4",
     "vite": "^2.8.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "surge": "^0.23.1"
+  }
 }
